Revision history for Web::Components::Role::Email

          - Passes tests

0.1.1     2015-09-02 20:22:21
          - Added project files to master branch
