@@ -9,8 +9,8 @@ File::DataClass           = v0.66.0
 MIME::Types               = 2.11
 Moo                       = 2.000001
 Try::Tiny                 = 0.22
-Unexpected                = v0.40.0
-Web::Components::Role::TT = v0.3.0
+Unexpected                = v0.41.0
+Web::Components::Role::TT = v0.4.0
 
 [Prereqs / ConfigureRequires]
 version           = 0.88
