@@ -1,5 +1,6 @@
 Revision history for Web::Components::Role::Email
 
+          - Fewer test dependencies in boilerplate
           - Passes tests
 
 0.1.1     2015-09-02 20:22:21
